--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_2.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_2.cshtml
@@ -27,7 +27,7 @@
         </tr>
     </tbody>
 </table>
-{{if !infraccion.flgDesvirtua}}
+{{if infraccion.flgDesvirtua}}
 <ol class="continue" style="margin-left: -37pt;">
     <li>
         Mediante la Resolución Sub Directoral N° 00XXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX, se imputó al/la concesionario/a presuntamente incumplir con la presentación (descripción del tipo de informe de ejecución y el periodo).
@@ -59,6 +59,7 @@
         </span>
     </li>
 </ol>
+{{/if}}
 {{if infraccion.flgSubsana}}
 <h5><strong>Sobre la subsanación voluntaria</strong></h5>
 <ol class="continue" style="margin-left: -37pt;">
@@ -131,5 +132,4 @@
         Sin perjuicio de lo señalado anteriormente, se exhorta al/la concesionario/a a cumplir con su obligación como titular del contrato de concesión, y de remitir a esta Administración, los informes de ejecución, dentro del plazo y forma establecida en la normativa vigente; es decir dentro de los cuarenta y cinco (45) días calendario de culminado el año operativo y suscrito por el regente, en los casos que corresponda, a fin de evitar incurrir en futuras infracciones administrativas.
     </li>
 </ol>
-{{/if}}
 {{/if}}
