--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_InformeIFI.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_InformeIFI.cshtml
@@ -460,19 +460,27 @@
                 <div class="row align-items-center">
                     <div class="col-auto">
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="rb_calculo_multa" id="rb_calculo_multa_si" v-bind:value="true" v-model="Informe.FLG_SANCION">
-                            <label class="form-check-label" for="rb_calculo_multa_si">Si</label>
+                            <input class="form-check-input" type="radio" name="rb_sancion" id="rb_sancion_ninguna" v-bind:value="0" v-model="Informe.FLG_SANCION">
+                            <label class="form-check-label" for="rb_sancion_ninguna">Ninguna</label>
                         </div>
                         <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="rb_calculo_multa" id="rb_calculo_multa_no" v-bind:value="false" v-model="Informe.FLG_SANCION">
-                            <label class="form-check-label" for="rb_calculo_multa_no">No</label>
+                            <input class="form-check-input" type="radio" name="rb_sancion" id="rb_sancion_amonestacion" v-bind:value="1" v-model="Informe.FLG_SANCION">
+                            <label class="form-check-label" for="rb_sancion_amonestacion">Amonestación</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="rb_sancion" id="rb_sancion_multa" v-bind:value="2" v-model="Informe.FLG_SANCION">
+                            <label class="form-check-label" for="rb_sancion_multa">Multa</label>
+                        </div>
+                        <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="rb_sancion" id="rb_sancion_amon_multa" v-bind:value="3" v-model="Informe.FLG_SANCION">
+                            <label class="form-check-label" for="rb_sancion_amon_multa">Amonestación y multa</label>
                         </div>
                     </div>
-                    <template v-if="Informe.FLG_SANCION">
+                    <template v-if="[2,3].includes(Informe.FLG_SANCION)">
                         <div class="col-auto">
                             <div class="btn-group btn-group-sm">
                                 <button type="button" class="btn btn-info btn-sm" v-on:click="_informe.AbrirCalculoMulta()">
-                                    {{Informe.SANCION_COD_CALCULO ? 'Editar': 'Generar'}} cálculo de multa
+                                    {{Informe.SANCION_COD_CALCULO ? 'Editar': 'Generar'}} cálculo
                                 </button>
                                 <template v-if="Informe.SANCION_COD_CALCULO">
                                     <button type="button" class="btn btn-default btn-sm" title="Eliminar" v-on:click="_informe.EliminarArchivoSancion()">
@@ -481,7 +489,7 @@
                                 </template>
                             </div>
                         </div>
-                        <div class="col-auto">
+                        <div class="col-2">
                             <div class="input-group input-group-sm">
                                 <input type="number" class="form-control" v-model="Informe.SANCION_UIT" />
                                 <div class="input-group-append">
@@ -491,7 +499,7 @@
                         </div>
                         <div class="col-auto" v-if="Informe.SANCION_COD_CALCULO">
                             <span class="btn btn-success btn-sm">
-                                <a class="text-white" target="_blank" v-bind:href="_informe.UrlDescargarArchivoSancion()">DESCARGAR CÁLCULO DE MULTA</a>
+                                <a class="text-white" target="_blank" v-bind:href="_informe.UrlDescargarArchivoSancion()">DESCARGAR CÁLCULO</a>
                             </span>
                         </div>
                     </template>
