--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_13.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_13.cshtml
@@ -27,7 +27,7 @@
 </table>
 <ol class="continue" style="margin-left: -37pt;">
     <li>
-        Mediante la Resolución Sub Directoral N° 00XXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXX, se imputó al/la concesionario/a presuntamente incumplir con la implementación de la medida correctiva dispuesta por la Resolución Directoral N° XXXXXXXXXXXXX consistente en (detallar la medida correctiva).
+        Mediante la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se imputó al/la concesionario/a presuntamente incumplir con la implementación de la medida correctiva dispuesta por la Resolución Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero} consistente en (detallar la medida correctiva).
     </li>
     <li>
         <span>
@@ -155,7 +155,7 @@
                             </tbody>
                         </table>
                         <div>
-                            <strong>Fuente:</strong> Informe de Supervisión N° XXXXX-XXXX-OSINFOR/08.1.1
+                            <strong>Fuente:</strong> Informe de Supervisión N° ${informe.ANTECEDENTES_DOCS.Inf_Sup.numero || 'XXXXX-XXXX-OSINFOR/08.1.1'}
                         </div>
                     </span>
                 </li>
