--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_b.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/templates/infracciones/inciso_b.cshtml
@@ -28,7 +28,7 @@
 </table>
 <ol class="continue" style="margin-left: -37pt;">
     <li>
-        Mediante la Resolución Sub Directoral N° XXXXX-XXXX-OSINFOR/08.2.1, de fecha XX de XXXXX de XXXX, se imputó al/la concesionario/a presuntamente la incursión en la causal de caducidad por la extracción o movilización de recursos forestales y de fauna silvestre y de fauna silvestre por un volumen de XX.XXX m<sup>3</sup> (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie).
+        Mediante la Resolución Sub Directoral N° ${informe.ANTECEDENTES_DOCS.RSD.numero || 'XXXXX-XXXX-OSINFOR/08.2.1'}, de fecha ${informe.ANTECEDENTES_DOCS.RSD.fechaEmisionTexto ||'XX de XXXX'}, se imputó al/la concesionario/a presuntamente la incursión en la causal de caducidad por la extracción o movilización de recursos forestales y de fauna silvestre y de fauna silvestre por un volumen de XX.XXX m<sup>3</sup> (descripción del volumen total injustificado, precisando el volumen correspondiente a cada especie).
     </li>
     <li>
         <span>
