--- a/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_finalInstruccion.cshtml
+++ b/SIGOFCv3/Areas/Fiscalizacion/Views/InformeLegal/Shared/_finalInstruccion.cshtml
@@ -309,6 +309,11 @@
         _renderFinalInstruccion.dtSubsanacionFinalInstruccion.rows.add(JSON.parse('@Html.Raw(Json.Encode(@Model.ListSTD02))')).draw();
     }
 
+    _renderFinalInstruccion.fnInitDataTableOtrosDocumentos = function () {
+        const data = JSON.parse('@Html.Raw(Json.Encode(@Model.ListSTD03))');
+        _renderFinalInstruccion.dtOtrosDocumentos = data;
+    }
+
     _renderFinalInstruccion.fnInitDataTable_ListIncisosSubsanados = function () {
         var columns_label = [], columns_data = [], options = {};
 
@@ -338,6 +343,7 @@
         _renderFinalInstruccion.fnInitDataTable_Detail();
         _renderFinalInstruccion.fnInitDataTableAllanamiento();
         _renderFinalInstruccion.fnInitDataTableSubsanacion();
+        _renderFinalInstruccion.fnInitDataTableOtrosDocumentos();
         _renderFinalInstruccion.fnShowTerceroSolidario();
         _renderFinalInstruccion.fnInitDataTable_ListIncisosSubsanados();
     });
